--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node dist/index.js",
     "build": "tsc",
     "dev": "ts-node src/index.ts",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "test-watch": "jest --watchAll"
   },
   "dependencies": {
     "config": "^3.3.12",
